--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Barista Luna</h3>
-      <img src="/assets/img/LOGO_LUNA.png" class="img-rounded" alt="No Image" width="150" height="150">
+      <img src="assets/img/LOGO_LUNA.png" class="img-rounded" alt="No Image" width="150" height="150">
       <h3>PSICOACTIVA CAFE</h3>
       <p>Mente sana, activa, creativa y positiva. </p>
       <div class="social-links">
