--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
       </div>
       <div class="credits">
 
-        Designed by <a href="https:/snz.com/">SNZ</a>
+        Designed by <a href="https://napoleonsnz.github.io/">SNZ</a>
       </div>
     </div>
   </footer><!-- End Footer -->
