--- a/index.html
+++ b/index.html
@@ -820,11 +820,11 @@
        
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Barista Luna</span></strong>.
+        &copy; <strong><span>Barista Luna</span></strong>.
       </div>
       <div class="credits">
 
-        Designed by <a href="https:/snz.com/">SNZ</a>
+        by <a href="https:/snz.com/">-snz-</a>
       </div>
     </div>
   </footer><!-- End Footer -->
