--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
       </div>
       <div class="credits">
 
-        by <a href="https:/snz.com/">-snz-</a>
+        by <a href="https://napoleonsnz.github.io/">-snz-</a>
       </div>
     </div>
   </footer><!-- End Footer -->
