--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <a href="https://www.flaticon.com/free-icons/coffee-bean" title="coffee bean icons"></a>
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
@@ -54,13 +55,14 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">INICIO📌</a></li>
-          <li><a href="#about">BARISTA LUNA🌜</a></li>
+          <li><a href="#about" title="coffee bean icons">BARISTA LUNA🌜</a></li>
           <li><a href="#events1">PSICOACTIVA CAFÉ☕</a></li>
           <li><a href="#specials">PUNTOS DE VENTA🏩</a></li>
           <li><a href="#events">SERVICIOS PARA EVENTOS🎉</a></li>
           <li><a href="#testimonials">NUESTROS CLIENTES💗 </a></li>
           <li><a href="#gallery">GALERIA📷</a></li>
           <li><a href="#notices">NOTICIAS📰</a></li>
+
 
           <li class="book-a-table text-center"><a href="#formLink">CONTACTAME 💌</a></li>
         </ul>
@@ -92,6 +94,7 @@
           <div class=" img-fluid carousel-item active" style="background: url(assets/img/slide/slide-22.png);">
             <div class="carousel-container">
               <div class="carousel-content">
+
                 <h2 class="animate__animated animate__fadeInDown"><span>Psicoactiva</span> Café</h2>
                 <p class="animate__animated animate__fadeInUp">Psicoactiva Café, es una marca original de Barista Luna. Una joven empresaria Santaneca apasionada por el café y con gran deseo
                  de transmitir su conocimiento sobre el producto que usted está consumiendo. 
@@ -765,7 +768,7 @@
                 <div class="col-lg-6 col-md-6 info mt-4 mt-lg-0">
                   <i class="icofont-phone"></i>
                   <h4>Teléfono:</h4>
-                  <p>+503 7749 7537<br></p>
+                  <p><a href="tel:71398377" target="_blank">+503 7139 8377</a><br></p>
                 </div>
                 <div class="col-lg-6 col-md-6 info mt-4 mt-lg-0">
                   <i class="icofont-envelope"></i>
@@ -819,6 +822,7 @@
         
        
       </div>
+      <a href="https://www.flaticon.com/free-icons/coffee-bean" title="coffee bean icons">Coffee bean icons created by photo3idea_studio - Flaticon</a>
       <div class="copyright">
         &copy; <strong><span>Barista Luna</span></strong>.
       </div>
