--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
                 <div class="col-lg-6 col-md-6 info mt-4 mt-lg-0">
                   <i class="icofont-phone"></i>
                   <h4>Teléfono:</h4>
-                  <p><a href="tel:71398377" target="_blank">+503 7139 8377</a><br></p>
+                  <p><a href="tel:72311817" target="_blank">+503 72311817</a><br></p>
                 </div>
                 <div class="col-lg-6 col-md-6 info mt-4 mt-lg-0">
                   <i class="icofont-envelope"></i>
