--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
       </div>
       <div class="credits">
 
-        by <a href="https://napoleonsnz.github.io/">-snz-</a>
+        por <a href="https://napoleonsnz.github.io/"> NSC </a> <img src="assets/img/bulldog-frances.png" alt="bulldog" width="150" height="150">
       </div>
     </div>
   </footer><!-- End Footer -->
