--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
       </div>
       <div class="credits">
 
-        por <a href="https://napoleonsnz.github.io/"> NSC </a> <img src="assets/img/bulldog-frances.png" alt="" >
+        por <a href="https://napoleonsnz.github.io/"> NSC </a> 
       </div>
     </div>
   </footer><!-- End Footer -->
